# risk

./: .gitignore  NOTES.md  README.md  TODO.md  main.py  pyproject.toml
risk/: __init__.py  risk.py
risk/base/: config.py  continent.py  continent_base.py  map.py  map_base.py  pyspiel_game.py  risk_config.py  spiel.py  territory.py  territory_base.py
risk/game/: deck.py  game.py  risk.py  state.py
risk/game/base/: action.py  config.py  continent_base.py  game_base.py  map_base.py  player_base.py  territory_base.py
risk/game/map/: border.py  continent.py  map.py  territory.py  world.py
risk/game/player/: player_random.py  random.py
risk/map/: __init__.py  border.py  continent.py  map.py  territory.py  world.py
risk/map/maps/: three_territory.json  world.json
risk/metrics/: metrics.py
risk/players/: __init__.py  player_agent.py  player_noop.py  player_random.py
risk/rl/: agent.py  model.py  player_agent.py
scripts/: simulate.py
tests/: conftest.py  test_map.py
